cmake_minimum_required(VERSION 3.8 FATAL_ERROR)

project(ncursesc++demo)
set (CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_EXTENSIONS OFF)

file(GLOB_RECURSE SOURCE_FILES *.cpp *.h)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})


INCLUDE (FindPkgConfig)
PKG_SEARCH_MODULE (NCURSESPP REQUIRED ncurses++w)
PKG_SEARCH_MODULE (NCURSES REQUIRED ncursesw)
PKG_SEARCH_MODULE (NCURSESFORMS REQUIRED formw)
PKG_SEARCH_MODULE (NCURSESPANEL REQUIRED panelw)
PKG_SEARCH_MODULE (NCURSESMENU REQUIRED menuw)

target_link_libraries(${PROJECT_NAME} 
  ${NCURSESPP_LIBRARIES}
  ${NCURSES_LIBRARIES}
  ${NCURSESFORMS_LIBRARIES}
  ${NCURSESPANEL_LIBRARIES}
  ${NCURSESMENU_LIBRARIES}
)